--- a/app/src/main/res/layout/item_category_movie.xml
+++ b/app/src/main/res/layout/item_category_movie.xml
@@ -36,7 +36,7 @@
     
     <androidx.recyclerview.widget.RecyclerView
         app:layout_constraintTop_toBottomOf="@id/categoryName"
-        app:layout_constraintLeft_toLeftOf="@id/categoryName"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 
