--- a/app/src/main/res/layout/item_category_current_movie.xml
+++ b/app/src/main/res/layout/item_category_current_movie.xml
@@ -13,9 +13,9 @@
 
         android:id="@+id/imageCardView"
         android:layout_margin="@dimen/cartview_margin"
-        app:cardCornerRadius="20dp"
-        android:layout_width="200dp"
-        android:layout_height="250dp">
+        app:cardCornerRadius="@dimen/poster_image_radius"
+        android:layout_width="@dimen/poster_image_width"
+        android:layout_height="@dimen/poster_image_height">
         <ImageView
             android:id="@+id/imageView"
             android:scaleType="center"
@@ -30,13 +30,17 @@
         app:layout_constraintRight_toRightOf="@id/imageCardView"
         app:layout_constraintBottom_toTopOf="@id/linearStars"
 
+        android:marqueeRepeatLimit="marquee_forever"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
         android:id="@+id/textViewMovieName"
         android:gravity="center_vertical"
         android:layout_margin="@dimen/cartview_margin_text"
         android:textColor="@color/colorDarkWhite"
         android:layout_width="0dp"
         tools:text="Check text"
-        android:layout_height="25dp"/>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         app:layout_constraintTop_toBottomOf="@id/textViewMovieName"
@@ -48,32 +52,22 @@
         android:id="@+id/linearStars"
         android:gravity="center_vertical"
         android:layout_width="0dp"
-        android:layout_height="27dp">
+        android:layout_height="@dimen/movie_linear_stars_height">
         <View
-            android:id="@+id/star1"
-            android:background="@drawable/baseline_star_selector"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            style="@style/starsParams"
+            android:id="@+id/star1"/>
         <View
-            android:id="@+id/star2"
-            android:background="@drawable/baseline_star_selector"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            style="@style/starsParams"
+            android:id="@+id/star2"/>
         <View
-            android:id="@+id/star3"
-            android:background="@drawable/baseline_star_selector"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            style="@style/starsParams"
+            android:id="@+id/star3"/>
         <View
-            android:id="@+id/star4"
-            android:background="@drawable/baseline_star_selector"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            style="@style/starsParams"
+            android:id="@+id/star4"/>
         <View
-            android:id="@+id/star5"
-            android:background="@drawable/baseline_star_selector"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            style="@style/starsParams"
+            android:id="@+id/star5"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
