--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="main_text_margin">20dp</dimen>
-    <dimen name="search_edit_text_margin_top">40dp</dimen>
-    <dimen name="search_margin_top">50dp</dimen>
+    <dimen name="search_edit_text_margin_top">30dp</dimen>
+    <dimen name="search_margin_top">40dp</dimen>
     <dimen name="search_margin_left">10dp</dimen>
     <dimen name="movies_margin_view_top">30dp</dimen>
     <dimen name="movies_category_margin_start">40dp</dimen>
@@ -11,4 +11,12 @@
     <dimen name="recycler_margin_horizontal">10dp</dimen>
     <dimen name="cartview_margin">10dp</dimen>
     <dimen name="cartview_margin_text">10dp</dimen>
+    <dimen name="edit_text_height">40dp</dimen>
+    <dimen name="search_icon_size">20dp</dimen>
+    <dimen name="titles_category_height">40dp</dimen>
+    <dimen name="movie_linear_stars_height">27dp</dimen>
+    <dimen name="movie_star_size">25dp</dimen>
+    <dimen name="poster_image_width">200dp</dimen>
+    <dimen name="poster_image_height">250dp</dimen>
+    <dimen name="poster_image_radius">20dp</dimen>
 </resources>
