--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="titles_category_height">40dp</dimen>
     <dimen name="movie_linear_stars_height">27dp</dimen>
     <dimen name="movie_star_size">25dp</dimen>
+    <dimen name="movie_star_size_big">45dp</dimen>
     <dimen name="poster_image_width">200dp</dimen>
     <dimen name="poster_image_height">250dp</dimen>
     <dimen name="poster_image_radius">20dp</dimen>
