--- a/app/src/main/res/layout/movie_current_fragment.xml
+++ b/app/src/main/res/layout/movie_current_fragment.xml
@@ -1,86 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.compose.ui.platform.ComposeView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDark">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorDark">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/imageCardView"
-            android:layout_width="300dp"
-            android:layout_height="400dp"
-            android:layout_marginTop="40dp"
-
-            app:cardCornerRadius="@dimen/poster_image_radius"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription=""
-                android:scaleType="center" />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:gravity="center"
-            android:textColor="@color/colorWhite"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/imageCardView"
-            tools:text="Фильм" />
-
-        <LinearLayout
-            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
-            app:layout_constraintLeft_toLeftOf="@id/imageCardView"
-            app:layout_constraintRight_toRightOf="@id/imageCardView"
-
-            android:id="@+id/linearStars"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
-            <View
-                style="@style/starsParamsMovie"
-                android:id="@+id/star1"/>
-            <View
-                style="@style/starsParamsMovie"
-                android:id="@+id/star2"/>
-            <View
-                style="@style/starsParamsMovie"
-                android:id="@+id/star3"/>
-            <View
-                style="@style/starsParamsMovie"
-                android:id="@+id/star4"/>
-            <View
-                style="@style/starsParamsMovie"
-                android:id="@+id/star5"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textViewOverview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:textColor="@color/colorWhite"
-
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearStars" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    android:background="@color/colorDark" />
