--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorGray">#839192</color>
     <color name="colorYellow">#F4D03F</color>
     <color name="colorDarkWhite">#ECF0F1</color>
+    <color name="colorGenre">#382D57</color>
 </resources>
